manifest/dyson-assignment-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: dyson-assignment-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/dyson-assignment-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/dyson-assignment-default: "true"
